--- a/Calendrier/Demo/Index.html
+++ b/Calendrier/Demo/Index.html
@@ -17,12 +17,12 @@
     <!--[if lt IE 7]>
         <p class="browsehappy">Vous utilisez un naviguateur <strong>obselète</strong>. S'il vous plait <a href="http://browsehappy.com/">telechargez la mise a jour</a> pour profiter du site.</p>
     <![endif]-->
-    <div class="calendrier"></div>
+    <div class="calendrier" data-ride="calendrier"></div>
 </body>
 
 <script src="js/jquery-1.11.0.min.js "></script>
 <script src="js/Calendrier.js "></script>
-
+<!-->
 <script>
     $(".calendrier").calendrier({
         events: [{
@@ -32,5 +32,6 @@
         }]
     });
 </script>
+<![endif]-->
 
 </html>
