--- a/Polygon/Demo/Index.html
+++ b/Polygon/Demo/Index.html
@@ -22,15 +22,17 @@
     <!--[if lt IE 7]>
         <p class="browsehappy">Vous utilisez un naviguateur <strong>obselète</strong>. S'il vous plait <a href="http://browsehappy.com/">telechargez la mise a jour</a> pour profiter du site.</p>
     <![endif]-->
-    <div data-ride="polygon-master"></div>
+    <div data-role="application" data-application-name="IIID"></div>
 </body>
 
 <script src="js/jquery-1.11.0.min.js "></script>
 <script src="js/bootstrap.min.js "></script>
-<script src="js/Polygon.js "></script>
+<script src="js/Application.js "></script>
+<script src="js/sylvester.src.js "></script>
+<script src="js/IIIDBuilder.js "></script>
 <script>
     $(document).ready(function () {
-        console.log("reflow");
+
     });
 </script>
 
